--- a/index.css
+++ b/index.css
@@ -5,6 +5,8 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
+  background-color: #f0f0f0;
+  margin: 0px -20px;
 }
 
 .ant-layout-header {
@@ -75,4 +77,11 @@ body {
 
 .resMenu-description {
   width: 90%;
+}
+
+.online-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 90vh;
 }
