--- a/index.css
+++ b/index.css
@@ -13,6 +13,13 @@ body {
   z-index: 100;
 }
 
+@media (max-width: 768px) {
+  .header {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 .logo-container {
   margin: 4px 20px;
 }
@@ -23,7 +30,19 @@ body {
   }
 }
 
+@media (max-width: 768px) {
+  .logo-container {
+    margin: 4px auto;
+  }
+}
+
 @media (max-width: 425px) {
+  .user-button {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
   .user-button {
     display: none;
   }
@@ -57,6 +76,12 @@ body {
 @media (max-width: 425px) {
   .res-card {
     justify-content: space-around;
+  }
+}
+
+@media (max-width: 768) {
+  .res-card {
+    justify-content: space-evenly;
   }
 }
 
@@ -104,7 +129,20 @@ body {
   }
 }
 
+@media (max-width: 768px) {
+  .nav-items {
+    margin: 0px 0px 0px 30px !important;
+    justify-content: space-evenly;
+  }
+}
+
 @media (max-width: 425px) {
+  .online {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
   .online {
     display: none;
   }
@@ -115,6 +153,12 @@ body {
 }
 
 @media (max-width: 425px) {
+  .user-card {
+    margin: 20px 0 !important; /* Removes side margins on mobile */
+  }
+}
+
+@media (max-width: 768px) {
   .user-card {
     margin: 20px 0 !important; /* Removes side margins on mobile */
   }
@@ -162,6 +206,12 @@ body {
 @media (max-width: 425px) {
   .cart-card {
     margin: 50px 0 !important;
+  }
+}
+
+@media (max-width: 768px) {
+  .cart-card {
+    margin: 100px 0 !important;
   }
 }
 
