--- a/index.css
+++ b/index.css
@@ -199,7 +199,7 @@ body {
 
 @media (max-width: 768px) {
   .ant-layout-content {
-    margin: 100px 20px !important;
+    margin: 0 20px !important;
   }
 }
 
