--- a/index.css
+++ b/index.css
@@ -164,6 +164,12 @@ body {
   }
 }
 
+@media (max-width: 768px) {
+  .user-card-menu {
+    margin: 0 !important; /* Removes side margins on mobile */
+  }
+}
+
 .resMenu-description {
   width: 90%;
 }
@@ -199,7 +205,7 @@ body {
 
 @media (max-width: 768px) {
   .ant-layout-content {
-    margin: 0 20px !important;
+    margin: 100px 20px !important;
   }
 }
 
